--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <div id="score-text"></div>
         <button id="reset-button">Reset</button>
         <button id="restart-button">Restart</button>
-        <button id="pause-button">Pause</button>
       </div>
+      <div id="message-container"></div>
     </div>
 
     <div id="end-screen" class="hidden">
